--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,236 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- stylesheet -->
-    <link rel="stylesheet" href="./style.css" />
-    <title>Recipe Page</title>
-  </head>
-  <body></body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet" />
+
+  <!-- stylesheet -->
+  <link rel="stylesheet" href="./style.css" />
+  <title>Recipe Page</title>
+</head>
+
+<body class="container">
+  <div class="header lg:w-1/2">
+    <h1 class="font-serif text-2xl font-bold my-3 text-black md:text-5xl md:mb-6 md:mt-10 ">
+      Classic Cheesecake Recipe
+    </h1>
+    <div class="description flex items-start mb-6">
+      <img src="../src/assets/6dots.svg" alt="6 dots" />
+      <p class="italic ml-3 text-xs text-gray2 font-medium md:text-sm">
+        Look no further for a creamy and ultra smooth classic cheesecake
+        recipe! Paired with a buttery graham cracker crust, no one can deny
+        its simple decadence. For the best results, bake in a water bath.
+      </p>
+    </div>
+  </div>
+
+  <div class="recipe-img mb-6">
+    <img src="../src/assets/recipe.png" alt="recipe" class="rounded-xl" />
+  </div>
+
+  <div class="prep md:grid md:grid-cols-12">
+    <div class="info flex-col md:h-max md:shadow-md md:px-10 md:py-10 md:col-span-2 md:order-last md:max-w-xs md:rounded-xl">
+      <div class="item flex items-center mb-8 md:justify-center ">
+        <svg class="fill-orange mr-2" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px"
+          fill="#000000">
+          <path d="M0 0h24v24H0z" fill="none" />
+          <path
+            d="M8.1 13.34l2.83-2.83L3.91 3.5c-1.56 1.56-1.56 4.09 0 5.66l4.19 4.18zm6.78-1.81c1.53.71 3.68.21 5.27-1.38 1.91-1.91 2.28-4.65.81-6.12-1.46-1.46-4.2-1.1-6.12.81-1.59 1.59-2.09 3.74-1.38 5.27L3.7 19.87l1.41 1.41L12 14.41l6.88 6.88 1.41-1.41L13.41 13l1.47-1.47z" />
+        </svg>
+        <div class="item-info">
+          <p class="text-gray4 font-bold text-xs uppercase">Yields</p>
+          <p class="text-orange font-medium text-xs md:text-sm">12 servings</p>
+        </div>
+      </div>
+      <div class="times flex gap-10 md:flex-col md:gap-0">
+        <div class="item flex items-center mb-8 md:justify-center">
+          <svg class="fill-gray2 mr-2" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px"
+            fill="#000000">
+            <path d="M0 0h24v24H0z" fill="none" />
+            <path
+              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z" />
+            <path d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z" /></svg>
+          <path d="M0 0h24v24H0z" fill="none" />
+          <path
+            d="M8.1 13.34l2.83-2.83L3.91 3.5c-1.56 1.56-1.56 4.09 0 5.66l4.19 4.18zm6.78-1.81c1.53.71 3.68.21 5.27-1.38 1.91-1.91 2.28-4.65.81-6.12-1.46-1.46-4.2-1.1-6.12.81-1.59 1.59-2.09 3.74-1.38 5.27L3.7 19.87l1.41 1.41L12 14.41l6.88 6.88 1.41-1.41L13.41 13l1.47-1.47z" />
+          </svg>
+          <div class="item-info">
+            <p class="text-gray4 font-bold text-xs uppercase">Prep Time</p>
+            <p class="text-gray1 font-medium text-xs md:text-sm">45 minutes</p>
+          </div>
+        </div>
+        <div class="item flex items-center mb-8 md:justify-center">
+          <svg class="fill-gray2 mr-2" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px"
+            fill="#000000">
+            <path d="M0 0h24v24H0z" fill="none" />
+            <path
+              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z" />
+            <path d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z" /></svg>
+          <path d="M0 0h24v24H0z" fill="none" />
+          <path
+            d="M8.1 13.34l2.83-2.83L3.91 3.5c-1.56 1.56-1.56 4.09 0 5.66l4.19 4.18zm6.78-1.81c1.53.71 3.68.21 5.27-1.38 1.91-1.91 2.28-4.65.81-6.12-1.46-1.46-4.2-1.1-6.12.81-1.59 1.59-2.09 3.74-1.38 5.27L3.7 19.87l1.41 1.41L12 14.41l6.88 6.88 1.41-1.41L13.41 13l1.47-1.47z" />
+          </svg>
+          <div class="item-info">
+            <p class="text-gray4 font-bold text-xs uppercase">Cook Time</p>
+            <p class="text-gray1 font-medium text-xs md:text-sm">1 hour</p>
+          </div>
+        </div>
+        <div class="item flex items-center mb-8 md:mb-0  md:justify-center">
+          <svg class="fill-gray2 mr-2" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px"
+            fill="#000000">
+            <path d="M0 0h24v24H0z" fill="none" />
+            <path
+              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z" />
+            <path d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z" /></svg>
+          <path d="M0 0h24v24H0z" fill="none" />
+          <path
+            d="M8.1 13.34l2.83-2.83L3.91 3.5c-1.56 1.56-1.56 4.09 0 5.66l4.19 4.18zm6.78-1.81c1.53.71 3.68.21 5.27-1.38 1.91-1.91 2.28-4.65.81-6.12-1.46-1.46-4.2-1.1-6.12.81-1.59 1.59-2.09 3.74-1.38 5.27L3.7 19.87l1.41 1.41L12 14.41l6.88 6.88 1.41-1.41L13.41 13l1.47-1.47z" />
+          </svg>
+          <div class="item-info">
+            <p class="text-gray4 font-bold text-xs uppercase">Total Time</p>
+            <p class="text-gray1 font-medium text-xs md:text-sm">1.75 hours</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <div class="ingredients text-gray1 md:mr-12 md:col-span-10 md:max-w-xl">
+      <h2 class="font-serif font-bold text-lg mb-3 md:text-2xl">Ingredients</h2>
+      <div class="food mb-10">
+        <h3 class="font-serif font-medium text-base italic mb-4 md:text-lg">Graham Cracker Crust</h3>
+        <div class="ingredient flex mb-3">
+          <input type="checkbox" class="flex-none h-5 w-5 mr-3">
+          <label class="text-sm md:text-base">
+            1 and 1/2 cups (150g) <span class="font-bold">graham cracker crumbs</span> (about 10 full sheet graham
+            crackers)
+          </label>
+        </div>
+        <div class="ingredient flex mb-3">
+          <input type="checkbox" class="flex-none h-5 w-5 mr-3">
+          <label class="text-sm md:text-base">
+            5 Tablespoons (70g) <span class="font-bold">unsalted butter</span>, melted
+
+          </label>
+        </div>
+        <div class="ingredient flex mb-3">
+          <input type="checkbox" class="flex-none h-5 w-5 mr-3">
+          <label class="text-sm md:text-base">
+            1/4 cup (50g) <span class="font-bold">granulated sugar</span>
+          </label>
+        </div>
+      </div>
+      <div class="food mb-10">
+        <h3 class="font-serif font-medium text-base italic mb-4 md:text-lg">Cheesecake</h3>
+        <div class="ingredient flex mb-3">
+          <input type="checkbox" class="flex-none h-5 w-5 mr-3">
+          <label class="text-sm md:text-base">
+            four 8-ounce blocks (904g) full-fat <span class="font-bold">cream cheese</span>, softened to room
+            temperature
+          </label>
+        </div>
+        <div class="ingredient flex mb-3">
+          <input type="checkbox" class="flex-none h-5 w-5 mr-3">
+          <label class="text-sm md:text-base">
+            1 cup (200g) <span class="font-bold">granulated sugar</span>
+          </label>
+        </div>
+        <div class="ingredient flex mb-3">
+          <input type="checkbox" class="flex-none h-5 w-5 mr-3">
+          <label class="text-sm md:text-base">
+            1 cup (240g) full-fat <span class="font-bold">sour cream</span>, at room temperature
+          </label>
+        </div>
+        <div class="ingredient flex mb-3">
+          <input type="checkbox" class="flex-none h-5 w-5 mr-3">
+          <label class="text-sm md:text-base">
+            1 teaspoon <span class="font-bold">pure vanilla extract</span>
+          </label>
+        </div>
+        <div class="ingredient flex mb-3">
+          <input type="checkbox" class="flex-none h-5 w-5 mr-3">
+          <label class="text-sm md:text-base">
+            2 teaspoons fresh <span class="font-bold">lemon juice</span> (optional, but recommended)
+          </label>
+        </div>
+        <div class="ingredient flex mb-3">
+          <input type="checkbox" class="flex-none h-5 w-5 mr-3">
+          <label class="text-sm md:text-base">
+            3 large <span class="font-bold">eggs</span>, at room temperature
+          </label>
+        </div>
+        <div class="ingredient flex mb-3">
+          <input type="checkbox" class="flex-none h-5 w-5 mr-3">
+          <label class="text-sm md:text-base">
+            topping suggestions: <span class="italic font-semibold">salted caramel, lemon curd, strawberry topping,
+              chocolate ganache, red wine chocolate ganache, fresh fruit, whipped cream, or raspberry sauce</span>
+            (recipe in notes)
+          </label>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="instructions mb-16 md:grid md:grid-cols-12">
+    <h2 class="font-serif font-bold text-2xl mb-7 md: col-span-12">Instructions</h2>
+    <div class="instruction grid grid-cols-6 mb-6 md:col-span-12 md:grid-cols-12 md:max-w-xl">
+      <p class="font-serif bg-orange text-white text-2xl font-semibold rounded-lg mr-4 h-9 w-9 col-span-1 text-center md:col-span-1">1</p>
+      <p class="text-base col-span-5 md:col-span-11">Adjust the oven rack to the lower-middle position and preheat oven to 350°F (177°C).</p>
+    </div>
+    <div class="instruction grid grid-cols-6 mb-6 md:col-span-12 md:grid-cols-12 md:max-w-xl">
+      <p class="font-serif bg-orange text-white text-2xl font-semibold rounded-lg mr-4 h-9 w-9 col-span-1 text-center md:col-span-1">2</p>
+      <p class="text-base col-span-5 md:col-span-11">
+        <span class="font-bold">Make the crust:</span>
+        Using a food processor, pulse the graham crackers into crumbs. Pour into a medium bowl and stir in sugar and melted butter until combined. (You can also pulse it all together in the food processor.) Mixture will be sandy. Press firmly into the bottom and slightly up the sides of a 9-inch or 10-inch springform pan. No need to grease the pan first. I use the bottom of a measuring cup to pack the crust down tightly. Pre-bake for 8 minutes. Remove from the oven and place the hot pan on a large piece of aluminum foil. The foil will wrap around the pan for the water bath in step 4. Allow crust to slightly cool as you prepare the filling.
+      </p>
+    </div>
+    <div class="instruction grid grid-cols-6 mb-6 md:col-span-12 md:grid-cols-12 md:max-w-xl">
+      <p class="font-serif bg-orange text-white text-2xl font-semibold rounded-lg mr-4 h-9 w-9 col-span-1 text-center md:col-span-1">3</p>
+      <p class="text-base col-span-5 md:col-span-11">
+        <span class="font-bold">Make the filling: </span>
+        Using a handheld or stand mixer fitted with a paddle attachment, beat the cream cheese and granulated sugar together on medium-high speed in a large bowl until the mixture is smooth and creamy, about 2 minutes. Add the sour cream, vanilla extract, and lemon juice then beat until fully combined. On medium speed, add the eggs one at a time, beating after each addition until just blended. After the final egg is incorporated into the batter, stop mixing. To help prevent the cheesecake from deflating and cracking as it cools, avoid over-mixing the batter as best you can.      </p>
+    </div>
+    <div class="instruction grid grid-cols-6 mb-6 md:col-span-12 md:grid-cols-12 md:max-w-xl">
+      <p class="font-serif bg-orange text-white text-2xl font-semibold rounded-lg mr-4 h-9 w-9 col-span-1 text-center md:col-span-1">4</p>
+      <p class="text-base col-span-5 md:col-span-11">
+        <span class="font-bold">Prepare the simple water bath (see note)</span>
+         Boil a pot of water. You need 1 inch of water in your roasting pan for the water bath, so make sure you boil enough. I use an entire kettle of hot water. As the water is heating up, wrap the aluminum foil around the springform pan. Pour the cheesecake batter on top of the crust. Use a rubber spatula or spoon to smooth it into an even layer. Place the pan inside of a large roasting pan. Carefully pour the hot water inside of the pan and place in the oven. (Or you can place the roasting pan in the oven first, then pour the hot water in. Whichever is easier for you.)
+      </p>
+    </div>
+    <div class="instruction grid grid-cols-6 mb-6 md:col-span-12 md:grid-cols-12 md:max-w-xl">
+      <p class="font-serif bg-orange text-white text-2xl font-semibold rounded-lg mr-4 h-9 w-9 col-span-1 text-center md:col-span-1">5</p>
+      <p class="text-base col-span-5 md:col-span-11">
+        Bake cheesecake for 55-70 minutes or until the center is almost set. When it’s done, the center of the cheesecake will slightly wobble if you gently shake the pan. Turn the oven off and open the oven door slightly. Let the cheesecake sit in the oven in the water bath as it cools down for 1 hour. Remove from the oven and water bath, then cool cheesecake completely at room temperature. Then refrigerate the cheesecake for at least 4 hours or overnight.
+      </p>
+    </div>
+    <div class="instruction grid grid-cols-6 mb-6 md:col-span-12 md:grid-cols-12 md:max-w-xl">
+      <p class="font-serif bg-orange text-white text-2xl font-semibold rounded-lg mr-4 h-9 w-9 col-span-1 text-center md:col-span-1">6</p>
+      <p class="text-base col-span-5 md:col-span-11">
+        Use a knife to loosen the chilled cheesecake from the rim of the springform pan, then remove the rim. Using a clean sharp knife, cut into slices for serving. For neat slices, wipe the knife clean and dip into warm water between each slice.      </p>
+    </div>
+    <div class="instruction grid grid-cols-6 mb-6 md:col-span-12 md:grid-cols-12 md:max-w-xl">
+      <p class="font-serif bg-orange text-white text-2xl font-semibold rounded-lg mr-4 h-9 w-9 col-span-1 text-center md:col-span-1">7</p>
+      <p class="text-base col-span-5 md:col-span-11">
+        Serve cheesecake with desired toppings. Cover and store leftover cheesecake in the refrigerator for up to 5 days.
+      </p>
+    </div>
+
+    <div class="source text-gray4 text-xs md:col-span-4 md:mt-8">
+      <p class="italic">Source: <span class="flex flex-col md:inline">https://sallysbakingaddiction.com/classic-cheesecake/ </span></p>
+    </div>
+  </div>
+
+  <div class="footer text-center text-sm mb-4">
+    <p class="text-gray3">created by <span class="font-bold">WNBARookie</span> - devChallenges.io</p>
+  </div>
+</body>
+
 </html>
