--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       Classic Cheesecake Recipe
     </h1>
     <div class="description flex items-start mb-6">
-      <img src="../src/assets/6dots.svg" alt="6 dots" />
+      <img src="./assets/6dots.svg" alt="6 dots" />
       <p class="italic ml-3 text-xs text-gray2 font-medium md:text-sm">
         Look no further for a creamy and ultra smooth classic cheesecake
         recipe! Paired with a buttery graham cracker crust, no one can deny
@@ -34,7 +34,7 @@
   </div>
 
   <div class="recipe-img mb-6">
-    <img src="../src/assets/recipe.png" alt="recipe" class="rounded-xl" />
+    <img src="./assets/recipe.png" alt="recipe" class="rounded-xl" />
   </div>
 
   <div class="prep md:grid md:grid-cols-12">
